[package]
name = "callsoup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.17"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
rustls-pemfile = "1"
rustls = "0.20.2"
reqwest = { version="0.11.23", features=["rustls-tls", "blocking"] }
blake3 = "1.4.0"
serde_json = "1.0.111"
bytes = "1.5.0"
actix-http = "3.5.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[dependencies.redis]
version = "*"
